Re-arranging the page title order to make it more user-friendly than standard prosilver
Signed-off-by: SA007 <sa007@phpbbdevelopers.net>

--- a/problue_release/template/overall_header.html
+++ b/problue_release/template/overall_header.html
@@ -13,7 +13,7 @@
 <meta name="description" content="{SITE_DESCRIPTION}" />
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 {META}
-<title>{SITENAME} &bull; <!-- IF S_IN_MCP -->{L_MCP} &bull; <!-- ELSEIF S_IN_UCP -->{L_UCP} &bull; <!-- ENDIF -->{PAGE_TITLE}</title>
+<title>{PAGE_TITLE} &bull; <!-- IF S_IN_MCP -->{L_MCP} &bull; <!-- ELSEIF S_IN_UCP -->{L_UCP} &bull; <!-- ENDIF -->{SITENAME}</title>
 
 <!-- IF S_ENABLE_FEEDS -->
 	<!-- IF S_ENABLE_FEEDS_OVERALL --><link rel="alternate" type="application/atom+xml" title="{L_FEED} - {SITENAME}" href="{U_FEED}" /><!-- ENDIF -->
