--- a/problue/template/overall_footer.html
+++ b/problue/template/overall_footer.html
@@ -31,6 +31,7 @@
 //-->
 
 	<div class="copyright">Powered by <a href="http://www.phpbb.com/">phpBB</a> &copy; 2000, 2002, 2005, 2007 phpBB Group
+	<br />ProBlue Style by <a href="http://www.unknownbliss.co.uk/">Unknown Bliss</a> &copy; 2010 Unknown Bliss
 		<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
 		<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
 		<!-- IF U_ACP --><br /><strong><a href="{U_ACP}">{L_ACP}</a></strong><!-- ENDIF -->
