Removing white space when no forum description exists
Signed-off-by: SA007 <sa007@phpbbdevelopers.net>

--- a/problue/template/forumlist_body.html
+++ b/problue/template/forumlist_body.html
@@ -29,8 +29,9 @@
 				<!-- IF S_ENABLE_FEEDS and forumrow.S_FEED_ENABLED --><!-- <a class="feed-icon-forum" title="{L_FEED} - {forumrow.FORUM_NAME}" href="{U_FEED}?f={forumrow.FORUM_ID}"><img src="{T_THEME_PATH}/images/feed.gif" alt="{L_FEED} - {forumrow.FORUM_NAME}" /></a> --><!-- ENDIF -->
 
 					<!-- IF forumrow.FORUM_IMAGE --><span class="forum-image">{forumrow.FORUM_IMAGE}</span><!-- ENDIF -->
-					<a href="{forumrow.U_VIEWFORUM}" class="forumtitle">{forumrow.FORUM_NAME}</a><br />
-					{forumrow.FORUM_DESC}
+					<a href="{forumrow.U_VIEWFORUM}" class="forumtitle">{forumrow.FORUM_NAME}</a><!-- IF forumrow.FORUM_DESC -->
+               <br />{forumrow.FORUM_DESC}
+               <!-- ENDIF -->
 					<!-- IF forumrow.MODERATORS -->
 						<br /><strong>{forumrow.L_MODERATOR_STR}:</strong> {forumrow.MODERATORS}
 					<!-- ENDIF -->
@@ -42,7 +43,7 @@
 					<dd class="topics"> {L_TOPICS}: {forumrow.TOPICS} <dfn>{L_TOPICS}</dfn><br />{L_POSTS}: {forumrow.POSTS}<dfn>{L_POSTS}</dfn></dd>
 					<dd class="lastpost"><span>
 						<!-- IF forumrow.U_UNAPPROVED_TOPICS --><a href="{forumrow.U_UNAPPROVED_TOPICS}">{UNAPPROVED_IMG}</a><!-- ENDIF -->
-						<!-- IF forumrow.LAST_POST_TIME -->{L_LATEST_TOPIC_TITLE} <br />
+						<!-- IF forumrow.LAST_POST_TIME -->{forumrow.LAST_POST_SUBJECT} <br />
 						<dfn>{L_LAST_POST}</dfn> {L_POST_BY_AUTHOR} {forumrow.LAST_POSTER_FULL}
 						<!-- IF not S_IS_BOT --><a href="{forumrow.U_LAST_POST}">{LAST_POST_IMG}</a> <!-- ENDIF --><br />{forumrow.LAST_POST_TIME}<!-- ELSE -->{L_NO_POSTS}<br />&nbsp;<!-- ENDIF --></span>
 					</dd>
