Making fixed-width
Signed-off-by: SA007 <sa007@phpbbdevelopers.net>

--- a/problue/theme/common.css
+++ b/problue/theme/common.css
@@ -102,8 +102,10 @@ p.right {
 /* Main blocks
 ---------------------------------------- */
 #wrap {
-	padding: 0 20px;
-	min-width: 650px;
+   padding: 0 20px;
+   min-width: 650px;
+   max-width: 900px;
+   margin: 0 auto;
 }
 
 #simple-wrap {
