Adding icon ledgend for index. Topic Page legend coming soon. Thanks to _Vinny_ for this KB article which saved me alot of time: http://www.phpbb.com/kb/article/prosilver-forum-legend/
Signed-off-by: SA007 <sa007@phpbbdevelopers.net>

--- a/problue/template/index_body.html
+++ b/problue/template/index_body.html
@@ -45,4 +45,12 @@
 	<p>{TOTAL_POSTS} &bull; {TOTAL_TOPICS} &bull; {TOTAL_USERS} &bull; {NEWEST_USER}</p>
 <!-- ENDIF -->
 
+<div class="panel bg1" style="text-align: center;">
+    <div class="inner"><span class="corners-top"><span></span></span>
+        <img src="{T_IMAGESET_PATH}/forum_unread.gif" alt="{L_NEW_POSTS}" />&nbsp;&nbsp;{L_NEW_POSTS}&nbsp;&nbsp;
+        &nbsp;&nbsp;<img src="{T_IMAGESET_PATH}/forum_read.gif" alt="{L_NO_NEW_POSTS}" />&nbsp;&nbsp;{L_NO_NEW_POSTS}&nbsp;&nbsp;
+        &nbsp;&nbsp;<img src="{T_IMAGESET_PATH}/forum_read_locked.gif" alt="{L_FORUM_LOCKED}" />&nbsp;&nbsp;{L_FORUM_LOCKED}
+    <span class="corners-bottom"><span></span></span></div>
+</div>
+<br />
 <!-- INCLUDE overall_footer.html -->
