Fixing a few issues with width
Signed-off-by: SA007 <sa007@phpbbdevelopers.net>

--- a/problue/template/viewforum_body.html
+++ b/problue/template/viewforum_body.html
@@ -149,9 +149,7 @@
 				<dd class="author">{topicrow.TOPIC_AUTHOR_FULL}</dd>
 				<dd class="posts">{topicrow.REPLIES} <dfn>{L_REPLIES}</dfn></dd>
 				<dd class="views">{topicrow.VIEWS} <dfn>{L_VIEWS}</dfn></dd>
-				<dd class="lastpost"><span><dfn>{L_LAST_POST} </dfn>{L_POST_BY_AUTHOR} {topicrow.LAST_POST_AUTHOR_FULL}
-					<!-- IF not S_IS_BOT --><a href="{topicrow.U_LAST_POST}">{LAST_POST_IMG}</a> <!-- ENDIF --><br />{topicrow.LAST_POST_TIME}</span>
-				</dd>
+				<dd class="lastpost"><span><!-- IF not S_IS_BOT --><a href="{topicrow.U_LAST_POST}">{LAST_POST_IMG}</a> <!-- ENDIF --><br />{topicrow.LAST_POST_TIME}<dfn>{L_LAST_POST} </dfn></span></dd>
 			</dl>
 		</li>
 
