--- a/problue/theme/colours.css
+++ b/problue/theme/colours.css
@@ -642,7 +642,12 @@ fieldset.polls dd div {
 }
 
 .online {
-	background-image: url("{T_IMAGESET_LANG_PATH}/icon_user_online.gif");
+   background-image: url("{T_IMAGESET_LANG_PATH}/icon_user_online.gif");
+   margin-top: -5px;
+}
+
+.online dt {
+   margin-top: 5px;
 }
 
 /*  	
